--- a/Part2/index.html
+++ b/Part2/index.html
@@ -14,6 +14,8 @@
         <section><span>A</span><span>♥</span><span>A</span></section>
         <section><span>A</span><span>♠</span><span>A</span></section>
     </main>
+    <input id = "idInput" type="text" placeholder="Set Id">
+    <input id="colorInput" type="text"placeholder="Set Color">
     <script src="index.js"></script>
 </body>
 </html>
